# SWORD

./: .gitignore  ICSD_filter.py  ICSD_post_processing.ipynb  ICSD_precreen.py  ICSD_prescreen_filter.ipynb  ICSD_prescreen_report.txt  LICENSE  README.md  cif_quick_check.py  filter_exp_ele.py  hall_letter_maps_by_sg.json  icsd_clean.py  pyproject.toml  sword_hall_wp_perms_by_sg.json  utils_SWORD.py
examples/: dedup_ICSD_pipeline.py  dedup_ICSD_pipeline_multi.py  label_dataframe.py  label_dataframe_multi.py
legacy/old_manual_upload/: ICSD_filter.py  ICSD_precreen.py  SWORD_filter.ipynb  __init__.py  pyproject.toml
src/sword/: __init__.py  disorder.py  family.py  icsd.py  label.py  structure.py  utils.py  vacancy.py  wyckoff.py
src/sword/data/: wyckoff_sets.json
