[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SWORDlib"
description = "SWORDlib is a Python library based on SWORD - Symmetry and Wyckoff-sequence of Ordered and Disordered crystals."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [
  { name = "Yuyao Huang", email = "YUYAO003@e.ntu.edu.sg" },
  { name = "Wei Nong" },
  { name = "Shuya Yamazaki" },
  { name = "Martin Hoffmann Petersen" },
  { name = "Jianghai Wang" },
  { name = "Ruiming Zhu" },
  { name = "Kedar Hippalgaonkar" }
]

maintainers = [
  { name = "Yuyao Huang", email = "YUYAO003@e.ntu.edu.sg" }
]

keywords = [
  "materials-science",
  "crystallography",
  "wyckoff",
  "disorder",
  "deduplication",
  "pymatgen"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "monty",
  "numpy",
  "pandas",
  "pymatgen",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/YuyaoHuang330/SWORD"
Repository = "https://github.com/YuyaoHuang330/SWORD"
Issues = "https://github.com/YuyaoHuang330/SWORD/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sword.__version__" }

[tool.setuptools.package-data]
sword = [
  "data/*.csv",
  "data/*.json"
]
