[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swordlib"
version = "0.1.dev1"
description = "SWORDlib is a Python library for SWORD - Symmetry and Wyckoff-sequence of Ordered and Disordered crystals."
authors = [
    {name = "Yuyao Huang", email = "YUYAO003@e.ntu.edu.sg"},
    {name = "Wei Nong", email = "nw2y47@outlook.com"},
    {name = "Shuya Yamazaki", email = "shuya003@e.ntu.edu.sg"},
    {name = "Martin Hoffmann Petersen", email = "martin.petersen@ntu.edu.sg"},
    {name = "Jianghai Wang", email = "jianghai001@e.ntu.edu.sg"},
    {name = "Ruiming Zhu", email = "raymond_zhurm@outlook.com"},
    {name = "Kedar Hippalgaonkar", email = "kedar@ntu.edu.sg"},
]
maintainers = [
    {name = "Yuyao Huang", email = "YUYAO003@e.ntu.edu.sg"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    ]

requires-python = ">=3.9"
dependencies = [
    "pymatgen",
]

[tool.setuptools]
packages = [
    "swordlib",
    "swordlib.data",
]

[project.urls]
Homepage = "https://github.com/YuyaoHuang330/SWORD"
Issues = "https://github.com/YuyaoHuang330/SWORD/issues"